CUI: checkbox: make sure multiline checkboxes do not overflow

--- a/src/scss/themes/fylr/components/_checkbox.scss
+++ b/src/scss/themes/fylr/components/_checkbox.scss
@@ -22,6 +22,7 @@
 
 			.cui-button-center {
 				span {
+					max-width: 100%;
 					white-space: normal;
 					word-wrap: break-word;
 					text-overflow: clip;
